--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solidity-storage-lib",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Provides an access to a storage contract",
   "main": "index.js",
   "directories": {
@@ -13,7 +13,7 @@
     "truffle": "3.4.3",
     "truffle-hdwallet-provider": "mikefluff/truffle-hdwallet-provider",
     "ethereumjs-testrpc": "3.0.5",
-    "solidity-shared-lib": "alesanro/solidity-shared-lib#feature\/MINT-246"
+    "solidity-shared-lib": "chronobank/solidity-shared-lib"
   },
   "repository": {
     "type": "git",
