--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 sudo: false
 dist: trusty
 language: node_js
-node_js: 7
+node_js: 8
 before_install:
 - export PATH=$PATH:$(pwd)/node_modules/.bin
 - git config --global user.email "mike@chronobank.com"
 - git config --global user.name "Travis-CI"
 script:
-- testrpc -g 1 --network-id 424242 > /dev/null &
+- ganache-cli -g 1 --network-id 424242 > /dev/null &
 - truffle migrate --network test
-- truffle test --network test
+- truffle test --network test --clear
 
 # - if [ "$TRAVIS_BRANCH" == "release" ]; then
 #     git config credential.helper "store --file=.git/credentials";
