--- a/package.json
+++ b/package.json
@@ -4,21 +4,31 @@
   "description": "Provides an access to a storage contract",
   "main": "index.js",
   "scripts": {
-    "test:all": "./node_modules/truffle/build/cli.bundled.js test --network test",
-    "run:rpc": "./node_modules/ganache-cli/build/cli.node.js -g 1 --gasLimit 4700000 --trace_request true | grep -Ev \"FilterSubprovider|eth_getFilterChanges\"",
-    "compile": "./node_modules/truffle/build/cli.bundled.js compile",
-    "compile:all": "./node_modules/truffle/build/cli.bundled.js compile --all",
-    "migrate": "./node_modules/truffle/build/cli.bundled.js migrate",
-    "migrate:reset": "./node_modules/truffle/build/cli.bundled.js migrate --reset",
-    "console": "./node_modules/truffle/build/cli.bundled.js console --network test"
+    "test": "npx truffle test",
+    "release": "standard-version",
+    "coverage": "./node_modules/.bin/solidity-coverage",
+    "compile": "npx truffle compile",
+    "compile:all": "npx truffle compile --all",
+    "lint:sol": "npx solium --dir contracts",
+    "lint:js": "npx eslint . --fix",
+    "lint": "npm run lint:sol && npm run lint:js",
+    "testrpc": "npx ganache-cli -g 1 --gasLimit 8000000 --trace_request true | grep -Ev \"FilterSubprovider|eth_getFilterChanges\""
   },
   "dependencies": {
-    "solidity-shared-lib": "alesanro/solidity-shared-lib#feature/update-to-latest"
+    "solidity-shared-lib": "chronobank/solidity-shared-lib#v0.2.1"
   },
   "devDependencies": {
     "ganache-cli": "^6.1.4",
+    "truffle": "^4.1.13",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "eslint": "4",
+    "solium": "1",
+    "babel-eslint": "^8.2.5",
+    "coveralls": "^3.0.1",
     "solidity-coverage": "^0.5.4",
-    "truffle": "^4.1.13"
+    "standard-version": "^4.0.0"
   },
   "repository": {
     "type": "git",
