Add more tests; update travis.yml config to run testrpc

--- a/.npmignore
+++ b/.npmignore
@@ -3,10 +3,17 @@ migrations/
 test/
 ethpm.json
 
+*.tgz
+
 contracts/stubs
 contracts/Migrations.sol
 
+coverage/
+coverage*
+.solcover*
+
+
 .gitattributes
-.es*
+.eslint*
 .solium*
 truffle*
