--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 script:
   - npm test
 before_script:
-  - ganache-cli > /dev/null &
+  - npm run testrpc > /dev/null &
   - sleep 5
 after_script:
   - travis_wait 40 npm run coverage && cat coverage/lcov.info | coveralls
