--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "testrpc": "npx ganache-cli -g 1 --gasLimit 8000000 --trace_request true | grep -Ev \"FilterSubprovider|eth_getFilterChanges\""
   },
   "dependencies": {
-    "solidity-shared-lib": "chronobank/solidity-shared-lib#v0.2.1",
-    "solidity-eventshistory-lib": "chronobank/solidity-eventshistory-lib#develop"
+    "solidity-shared-lib": "chronobank/solidity-shared-lib#v0.2.2",
+    "solidity-eventshistory-lib": "chronobank/solidity-eventshistory-lib#v0.1.1"
   },
   "devDependencies": {
     "ganache-cli": "^6.1.4",
